# tooq-exanic-capture

./: CMakeLists.txt  Makefile  README.md  Readme  Readme.md
libs/exanic/: fifo_rx.h  fifo_tx.h  timeExanic.c  timeExanic.h
src/: main.c
